[package]
name = "vroom"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = ["libc", "byteorder"]

[dependencies]
libc = { version = "0.2.174", optional = true }
byteorder = { version = "1.5.0", optional = true }
env_logger = { version = "0.11.8", optional = true }
log = { version = "0.4.27", default-features = false }
hashbrown = { version = "0.15.4", default-features = false }
ahash = { version = "0.8.12", default-features = false }

[profile.release]
debug = true

[[example]]
name = "std_pci_huge"
required-features = ["std"]
